Primera versión de una barra de navegación al tope de la pagina, no contiene ningun boton u enlace solo subdivide la barra en una parte izquierda y una derecha

--- a/grupo11/WebContent/login.html
+++ b/grupo11/WebContent/login.html
@@ -3,10 +3,21 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<title>Acceso al sistema</title>
+	<!-- Se cargan las librerias de Boostrap Twitter -->
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 	<script type="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-	<button type="button" class="btn btn-primary">Destacado</button>
+	<!-- Barra de navegación -->
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    	<div class="container">
+    		<div class="navbar-header">
+          		<p class="navbar-text">Proyecto - texto -</p>
+        	</div>
+           	<ul class="nav navbar-nav navbar-right">
+            	<p class="navbar-text">Cosas</p>
+          	</ul>
+        </div>
+    </div>
 </body>
 </html>
